project(demo)
cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(lib_000000)
add_subdirectory(lib_000001)
add_subdirectory(lib_000002)
add_subdirectory(lib_000003)
add_subdirectory(lib_000004)
add_subdirectory(lib_000005)
add_subdirectory(lib_000006)
add_subdirectory(lib_000007)
add_subdirectory(lib_000008)
add_subdirectory(lib_000009)
add_subdirectory(lib_000010)
add_subdirectory(lib_000011)
add_subdirectory(lib_000012)
add_subdirectory(lib_000013)
add_subdirectory(lib_000014)
add_subdirectory(lib_000015)
add_subdirectory(lib_000016)
add_subdirectory(lib_000017)
add_subdirectory(lib_000018)
add_subdirectory(lib_000019)
add_subdirectory(lib_000020)
add_subdirectory(lib_000021)
add_subdirectory(lib_000022)
add_subdirectory(lib_000023)
add_subdirectory(lib_000024)
add_subdirectory(lib_000025)
add_subdirectory(lib_000026)
add_subdirectory(lib_000027)
add_subdirectory(lib_000028)
add_subdirectory(lib_000029)
add_subdirectory(lib_000030)
add_subdirectory(lib_000031)
add_subdirectory(lib_000032)
add_subdirectory(lib_000033)
add_subdirectory(lib_000034)
add_subdirectory(lib_000035)
add_subdirectory(lib_000036)
add_subdirectory(lib_000037)
add_subdirectory(lib_000038)
add_subdirectory(lib_000039)
add_subdirectory(lib_000040)
add_subdirectory(lib_000041)
add_subdirectory(lib_000042)
add_subdirectory(lib_000043)
add_subdirectory(lib_000044)
add_subdirectory(lib_000045)
add_subdirectory(lib_000046)
add_subdirectory(lib_000047)
add_subdirectory(lib_000048)
add_subdirectory(lib_000049)


add_executable(demo main.cxx)

target_link_libraries(demo 
lib_000000
lib_000001
lib_000002
lib_000003
lib_000004
lib_000005
lib_000006
lib_000007
lib_000008
lib_000009
lib_000010
lib_000011
lib_000012
lib_000013
lib_000014
lib_000015
lib_000016
lib_000017
lib_000018
lib_000019
lib_000020
lib_000021
lib_000022
lib_000023
lib_000024
lib_000025
lib_000026
lib_000027
lib_000028
lib_000029
lib_000030
lib_000031
lib_000032
lib_000033
lib_000034
lib_000035
lib_000036
lib_000037
lib_000038
lib_000039
lib_000040
lib_000041
lib_000042
lib_000043
lib_000044
lib_000045
lib_000046
lib_000047
lib_000048
lib_000049
)
