project(lib_000001)

set(lib_000001_SOURCES class_000050.cxx
    class_000051.cxx
    class_000052.cxx
    class_000053.cxx
    class_000054.cxx
    class_000055.cxx
    class_000056.cxx
    class_000057.cxx
    class_000058.cxx
    class_000059.cxx
    class_000060.cxx
    class_000061.cxx
    class_000062.cxx
    class_000063.cxx
    class_000064.cxx
    class_000065.cxx
    class_000066.cxx
    class_000067.cxx
    class_000068.cxx
    class_000069.cxx
    class_000070.cxx
    class_000071.cxx
    class_000072.cxx
    class_000073.cxx
    class_000074.cxx
    class_000075.cxx
    class_000076.cxx
    class_000077.cxx
    class_000078.cxx
    class_000079.cxx
    class_000080.cxx
    class_000081.cxx
    class_000082.cxx
    class_000083.cxx
    class_000084.cxx
    class_000085.cxx
    class_000086.cxx
    class_000087.cxx
    class_000088.cxx
    class_000089.cxx
    class_000090.cxx
    class_000091.cxx
    class_000092.cxx
    class_000093.cxx
    class_000094.cxx
    class_000095.cxx
    class_000096.cxx
    class_000097.cxx
    class_000098.cxx
    class_000099.cxx)

add_library(lib_000001 STATIC ${lib_000001_SOURCES})
