project(lib_000002)

set(lib_000002_SOURCES class_000100.cxx
    class_000101.cxx
    class_000102.cxx
    class_000103.cxx
    class_000104.cxx
    class_000105.cxx
    class_000106.cxx
    class_000107.cxx
    class_000108.cxx
    class_000109.cxx
    class_000110.cxx
    class_000111.cxx
    class_000112.cxx
    class_000113.cxx
    class_000114.cxx
    class_000115.cxx
    class_000116.cxx
    class_000117.cxx
    class_000118.cxx
    class_000119.cxx
    class_000120.cxx
    class_000121.cxx
    class_000122.cxx
    class_000123.cxx
    class_000124.cxx
    class_000125.cxx
    class_000126.cxx
    class_000127.cxx
    class_000128.cxx
    class_000129.cxx
    class_000130.cxx
    class_000131.cxx
    class_000132.cxx
    class_000133.cxx
    class_000134.cxx
    class_000135.cxx
    class_000136.cxx
    class_000137.cxx
    class_000138.cxx
    class_000139.cxx
    class_000140.cxx
    class_000141.cxx
    class_000142.cxx
    class_000143.cxx
    class_000144.cxx
    class_000145.cxx
    class_000146.cxx
    class_000147.cxx
    class_000148.cxx
    class_000149.cxx)

add_library(lib_000002 STATIC ${lib_000002_SOURCES})
