project(lib_000003)

set(lib_000003_SOURCES class_000150.cxx
    class_000151.cxx
    class_000152.cxx
    class_000153.cxx
    class_000154.cxx
    class_000155.cxx
    class_000156.cxx
    class_000157.cxx
    class_000158.cxx
    class_000159.cxx
    class_000160.cxx
    class_000161.cxx
    class_000162.cxx
    class_000163.cxx
    class_000164.cxx
    class_000165.cxx
    class_000166.cxx
    class_000167.cxx
    class_000168.cxx
    class_000169.cxx
    class_000170.cxx
    class_000171.cxx
    class_000172.cxx
    class_000173.cxx
    class_000174.cxx
    class_000175.cxx
    class_000176.cxx
    class_000177.cxx
    class_000178.cxx
    class_000179.cxx
    class_000180.cxx
    class_000181.cxx
    class_000182.cxx
    class_000183.cxx
    class_000184.cxx
    class_000185.cxx
    class_000186.cxx
    class_000187.cxx
    class_000188.cxx
    class_000189.cxx
    class_000190.cxx
    class_000191.cxx
    class_000192.cxx
    class_000193.cxx
    class_000194.cxx
    class_000195.cxx
    class_000196.cxx
    class_000197.cxx
    class_000198.cxx
    class_000199.cxx)

add_library(lib_000003 STATIC ${lib_000003_SOURCES})
