project(lib_000004)

set(lib_000004_SOURCES class_000200.cxx
    class_000201.cxx
    class_000202.cxx
    class_000203.cxx
    class_000204.cxx
    class_000205.cxx
    class_000206.cxx
    class_000207.cxx
    class_000208.cxx
    class_000209.cxx
    class_000210.cxx
    class_000211.cxx
    class_000212.cxx
    class_000213.cxx
    class_000214.cxx
    class_000215.cxx
    class_000216.cxx
    class_000217.cxx
    class_000218.cxx
    class_000219.cxx
    class_000220.cxx
    class_000221.cxx
    class_000222.cxx
    class_000223.cxx
    class_000224.cxx
    class_000225.cxx
    class_000226.cxx
    class_000227.cxx
    class_000228.cxx
    class_000229.cxx
    class_000230.cxx
    class_000231.cxx
    class_000232.cxx
    class_000233.cxx
    class_000234.cxx
    class_000235.cxx
    class_000236.cxx
    class_000237.cxx
    class_000238.cxx
    class_000239.cxx
    class_000240.cxx
    class_000241.cxx
    class_000242.cxx
    class_000243.cxx
    class_000244.cxx
    class_000245.cxx
    class_000246.cxx
    class_000247.cxx
    class_000248.cxx
    class_000249.cxx)

add_library(lib_000004 STATIC ${lib_000004_SOURCES})
